tests/snapshots/parser_snapshots__parser-3.snap
---
source: tests/parser_snapshots.rs
expression: parsed
---
{
  "Table": {
    "root": {
      "Table": {
        "float": {
          "Float": 3.14
        },
        "array": {
          "Array": [
            {
              "String": "string"
            },
            {
              "Boolean": true
            },
            {
              "Boolean": false
            }
          ]
        },
        "integer": {
          "Integer": -100
        },
        "boolean": {
          "Boolean": true
        },
        "table": {
          "Table": {
            "integer": {
              "Integer": 4
            },
            "cable": {
              "Table": {
                "stable": {
                  "Table": {
                    "boolean": {
                      "Boolean": true
                    }
                  }
                }
              }
            },
            "array": {
              "Array": [
                {
                  "String": "string"
                },
                {
                  "Integer": 100
                },
                {
                  "Float": 1.3
                },
                {
                  "Boolean": true
                },
                {
                  "Array": [
                    {
                      "String": "nested"
                    },
                    {
                      "Float": 4.3
                    },
                    {
                      "Boolean": false
                    }
                  ]
                }
              ]
            }
          }
        }
      }
    }
  }
}
